<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="247dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nama"
        android:inputType="text" />

    <EditText
        android:id="@+id/notelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/no_telp"
        android:inputType="number|phone" />

    <Button
        android:id="@+id/masuk"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded_masuk"
        android:text="@string/masuk" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/baru_pertama_kali_silahkan_daftar_sekarang"
        android:textColor="#000" />

    <Button
        android:id="@+id/daftar"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:text="@string/daftar"
        android:background="@drawable/btn_rounded_daftar"/>
</LinearLayout>